[package]
name = "nat"
version = "0.1.0"
authors = ["Qian Linfeng <thewawar@gmail.com>"]

[dependencies]
bytes = "~0.4.5"
env_logger = "~0.4.3"
future-utils = "~0.11.0"
futures = "~0.1.18"
get_if_addrs = "~0.5"
igd = "~0.6"
log = "~0.3.8"
maplit = "~1.0.1"
net2 = "~0.2.31"
quick-error = "~1.2"
rand = "~0.3.18"
serde = "~1.0"
serde_derive = "~1.0"
tokio-core = "~0.1.10"
tokio-io = "~0.1.3"
tokio-timer = "0.2.4"
unwrap = "~1.1"
void = "~1.0"
safe_crypto = "~0.1.0"

bincode = "~1.0.1"
rustun = "~0.1.5"

[dev-dependencies]
clap = "~2.32.0"
serde_json = "~1.0.24"
